--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,1 +1,6 @@
 <h1 align="center">This is the root page</h1>
+
+<div class="ui container raised segment">
+    <h2 align="center" class="ui header block">Welcome to Message Me</h2>
+    <p align="center">This content is in a raised segment and under a block header</p>
+</div>
