Build login page

--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,6 +1,73 @@
-<h1 align="center">This is the root page</h1>
+<h4 class="ui center aligned large icon header">
+  <i class="circular red paper plane outline icon"></i>
+  Say Something
+</h4>
 
-<div class="ui container raised segment">
-    <h2 align="center" class="ui header block">Welcome to Message Me</h2>
-    <p align="center">This content is in a raised segment and under a block header</p>
-</div>
+
+<div class="ui two column grid">
+  <div class="twelve wide column">
+    <div class="ui fluid raised card chatbox">
+      <div class="content">
+        <div class="ui feed">
+          <h4 class="ui header block">Chatroom</h4>
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                <em>Elliot Fu</em>: Test message
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                <em>Stevie Feliciano</em>: Reply message
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                <em>Helen Troy</em>: Placeholder
+              </div>
+            </div>
+          </div>
+          <div class="event">
+            <div class="content">
+              <div class="summary">
+                <em>Christian Rocha</em>: placeholder
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+        <div class="extra content">
+          <form class="ui reply form">
+            <div class="field">
+              <div class="ui fluid icon input focus">
+                <input type="text" placeholder="Enter a message...">
+                <i class="bordered inverted red edit icon"></i>
+              </div>
+            </div>
+          </form>       
+        </div>
+      </div>
+    
+  </div>
+  <div class="four wide column">
+      <div class="ui fluid raised card chatbox">
+        <div class="content">
+          <div class="ui vertical pointing menu">
+            <a class="active item">
+              Home
+            </a>
+            <a class="item">
+              Messages
+            </a>
+            <a class="item">
+              Friends
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
