--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -7,48 +7,22 @@
 <div class="ui two column grid">
   <div class="twelve wide column">
     <div class="ui fluid raised card chatbox">
-      <div class="content">
-        <div class="ui feed">
-          <h4 class="ui header block">Chatroom</h4>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <em>Elliot Fu</em>: Test message
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <em>Stevie Feliciano</em>: Reply message
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <em>Helen Troy</em>: Placeholder
-              </div>
-            </div>
-          </div>
-          <div class="event">
-            <div class="content">
-              <div class="summary">
-                <em>Christian Rocha</em>: placeholder
-              </div>
-            </div>
-          </div>
+      <h4 align="center" class="ui header block">Chatroom</h4>
+      <div class="content" id="messages">
+        <div class="ui feed" id="message-container">
+          
+            <%= render @messages %>
         </div>
       </div>
         <div class="extra content">
-          <form class="ui reply form">
+          <%= form_for(@message, html: {class: "ui reply form"}, url: message_path, remote: true) do |f| %>
             <div class="field">
               <div class="ui fluid icon input focus">
-                <input type="text" placeholder="Enter a message...">
-                <i class="bordered inverted red edit icon"></i>
+                <%= f.text_field :body, placeholder: "Enter a message..." %>
+                <%= f.button '<i class="bordered inverted red edit icon"></i>'.html_safe %>
               </div>
             </div>
-          </form>       
+          <% end %>       
         </div>
       </div>
     
