final commit before deploy

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,3 +8,13 @@
     height: 15em;
     overflow: auto;
 }
+
+.input {
+    button {
+        display: none;
+    }
+}
+
+a.white {
+    color: fff;
+}
