--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -30,16 +30,8 @@
   <div class="four wide column">
       <div class="ui fluid raised card chatbox">
         <div class="content">
-          <div class="ui vertical pointing menu">
-            <a class="active item">
-              Home
-            </a>
-            <a class="item">
-              Messages
-            </a>
-            <a class="item">
-              Friends
-            </a>
+          <div class="ui vertical menu">
+
           </div>
         </div>
       </div>
