--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,17 +1,18 @@
   <%= link_to  "Chatroom", root_path, class: "item" %>
-  <a class="item">
-    Messages
-  </a>
+  <% if logged_in? and current_user.admin? %>
+    <%= link_to  "Users", users_path, class: "item" %>
+  <% end %>
   <div class="right menu">
     <div class="ui dropdown item">
       Account <i class="dropdown icon"></i>
       <div class="menu">
         <% if logged_in? %>
           <%= link_to "Log out", logout_path, method: :delete, class: "item" %>
+          <%= link_to "Edit Profile", edit_user_path(current_user), class: "item" %>
         <% else %>
           <%= link_to "Log in", login_path, class: "item" %>
+          <%= link_to "Sign up", signup_path, class: "item" %>
         <% end %>
-        <a class="item">Sign up</a>
       </div>
   </div>
   <% if !logged_in? %>
