repairs on signup form

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -42,6 +42,7 @@
               <div class="ui checkbox input">
                 <%= f.check_box :admin %>
           </div>
+          </div>
         <% end %>
         <div> 
           <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class: "ui red submit button") %>
